create a simple server and client

--- a/host/samples/CMakeLists.txt
+++ b/host/samples/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(StrataRPC)
+
 option(TEST_TEMPLATE "Build 'Test Template'" OFF)
 add_feature_info(TEST_TEMPLATE TEST_TEMPLATE "Test Template")
 
