added random graph to the client sample

--- a/host/samples/StrataRPC/client/CMakeLists.txt
+++ b/host/samples/StrataRPC/client/CMakeLists.txt
@@ -13,12 +13,14 @@ add_executable(${PROJECT_NAME}
 )
 
 find_package(Qt5 ${VERSION_QT5}
-    COMPONENTS Core Quick
+    COMPONENTS Core Quick Charts Widgets
 )
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE Qt5::Core
     PRIVATE Qt5::Quick
+    PRIVATE Qt5::Charts
+    PRIVATE Qt5::Widgets
     PRIVATE StrataRPC-StrataClient
     PUBLIC strata::QtLogger
 )
