--- a/host/samples/StrataRPC/server/CMakeLists.txt
+++ b/host/samples/StrataRPC/server/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 add_executable(${PROJECT_NAME}
     main.cpp
     Server.cpp
+    RandomGraph.cpp
     logging/LoggingQtCategories.cpp
 )
 
