changed referenced file names according to new design

--- a/host/test/Platform-identification-test/CMakeLists.txt
+++ b/host/test/Platform-identification-test/CMakeLists.txt
@@ -14,8 +14,8 @@ find_package(Qt5 ${VERSION_QT5}
 
 target_link_libraries(${PROJECT_NAME}
     Qt5::Core
-    BoardManager
-    Device
+    Platform
+    PlatformManager
     SGJLinkConnector
 )
 
