Board/CMake,BoardManager/test/CMake: reverted strata::base64 back to PRIVATE & added into tests CMake instead

--- a/host/libs/Board/BoardManager/test/CMakeLists.txt
+++ b/host/libs/Board/BoardManager/test/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(${PROJECT_NAME}-test
     PRIVATE Device
     PRIVATE DeviceOperations
     PRIVATE CommandValidator
+    PRIVATE strata::base64
 )
 
 add_test(NAME ${PROJECT_NAME}-test
