updates path to refelect on the new structure and resoves an issue where git command is not found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,22 +59,22 @@ set(CMAKE_PLUGINS_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins")
 file(MAKE_DIRECTORY "${CMAKE_PLUGINS_OUTPUT_DIRECTORY}")
 
 option(BUILD_TESTING "Build the testing tree" ON)
-add_feature_info(BUILD_TESTING BUILD_TESTING "Build the tsting tree.")
+add_feature_info(BUILD_TESTING BUILD_TESTING "Build the testing tree.")
 enable_testing()
 if(BUILD_TESTING)
-    add_subdirectory(test)
-    add_subdirectory(samples)
+    add_subdirectory(internal/test)
+    add_subdirectory(internal/samples)
 endif()
 add_subdirectory(extern)
 option(BUILD_EXAMPLES "Build project examples" OFF)
 add_feature_info(BUILD_EXAMPLES BUILD_EXAMPLES "Build project examples")
 option(APPS_UTILS "Build project suplementary utils" ON)
 add_feature_info(APPS_UTILS APPS_UTILS "Build project suplementary utils")
-add_subdirectory(utils)
+add_subdirectory(internal/utils)
 option(BUILD_RS "Build research spikes" OFF)
 add_feature_info(BUILD_RS BUILD_RS "Build research spikes")
 if(BUILD_RS)
-    add_subdirectory(research_spikes)
+    add_subdirectory(internal/research_spikes)
 endif()
 add_subdirectory(components)
 add_subdirectory(apps)
