add simple application into research spikes for testing Device Scanner functionality

--- a/host/research_spikes/CMakeLists.txt
+++ b/host/research_spikes/CMakeLists.txt
@@ -2,4 +2,5 @@ if(BUILD_RS)
     add_subdirectory(oktawebview)
     add_subdirectory(couchbase-user-access)
     add_subdirectory(networkConnectivity)
+    add_subdirectory(platformVerification)
 endif()
