initial Platform class design

--- a/host/libs/Board/Platform/CMakeLists.txt
+++ b/host/libs/Board/Platform/CMakeLists.txt
@@ -10,6 +10,8 @@ find_package(Qt5 ${VERSION_QT5}
 
 add_library(${PROJECT_NAME}
     src/Device.cpp
+    src/DeviceNew.cpp
+    src/Platform.cpp
     src/logging/LoggingQtCategories.cpp
     src/Serial/SerialDevice.cpp
     src/Mock/MockDevice.cpp
@@ -39,6 +41,8 @@ add_library(${PROJECT_NAME}
 
     #AUTOMOC wont find header if it is in different directory
     include/Device.h
+    include/DeviceNew.h
+    include/Platform.h
     include/Serial/SerialDevice.h
     include/Mock/MockDevice.h
     include/Mock/MockDeviceControl.h
