--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,9 +28,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake/Modules")
 
-option(BUILD_TESTING "Build the testing tree." ON)
-enable_testing()
-
 include(SetupConfigurations)
 include(FeatureSummary)
 include(CMakeDependentOption)
@@ -44,7 +41,7 @@ include(AddQmlImportPathMacro)
 # common for 'apps' and 'components' that use resource files
 add_qml_import_path(PATH ":/")
 
-if (CMAKE_BUILD_TYPE STREQUAL "OTA")
+if(CMAKE_BUILD_TYPE STREQUAL "OTA")
     add_custom_target(${PROJECT_NAME})
     generate_ifw_version(GITTAG_PREFIX "ifw_")
 endif()
@@ -58,24 +55,13 @@ file(MAKE_DIRECTORY "${CMAKE_VIEWS_OUTPUT_DIRECTORY}")
 set(CMAKE_PLUGINS_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins")
 file(MAKE_DIRECTORY "${CMAKE_PLUGINS_OUTPUT_DIRECTORY}")
 
-option(BUILD_TESTING "Build the testing tree" ON)
-add_feature_info(BUILD_TESTING BUILD_TESTING "Build the testing tree.")
-enable_testing()
-if(BUILD_TESTING)
-    add_subdirectory(internal/test)
-    add_subdirectory(internal/samples)
+if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/internal")
+    add_subdirectory(internal)
 endif()
+
 add_subdirectory(extern)
 option(BUILD_EXAMPLES "Build project examples" OFF)
 add_feature_info(BUILD_EXAMPLES BUILD_EXAMPLES "Build project examples")
-option(APPS_UTILS "Build project suplementary utils" ON)
-add_feature_info(APPS_UTILS APPS_UTILS "Build project suplementary utils")
-add_subdirectory(internal/utils)
-option(BUILD_RS "Build research spikes" OFF)
-add_feature_info(BUILD_RS BUILD_RS "Build research spikes")
-if(BUILD_RS)
-    add_subdirectory(internal/research_spikes)
-endif()
 add_subdirectory(components)
 add_subdirectory(apps)
 add_subdirectory(libs)
