update cmake to have view as an optional dir

--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -27,3 +27,6 @@ if(APPS_CORECOMPONENTS)
     add_subdirectory(commoncpp)
 endif()
 
+if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/strata-platform-control-views")
+    add_subdirectory(strata-platform-control-views)
+endif()
