Convert CbLogger to official CBLite API

--- a/libs/loggers/CbLogger/src/CMakeLists.txt
+++ b/libs/loggers/CbLogger/src/CMakeLists.txt
@@ -12,7 +12,7 @@ add_library(strata::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME}
     PUBLIC Qt5::Core
 
-    PRIVATE strata::CouchbaseLiteCPP
+    PRIVATE strata::Couchbase-Lite-C
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
