--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -60,3 +60,4 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     include(ProjectExternals_monaco_editor)
 endif()
 include(ProjectExternals_cppzmq)
+include(ProjectExternals_libevent)
