--- a/.gitmodules
+++ b/.gitmodules
@@ -30,4 +30,4 @@
 [submodule "extern/libevent"]
 	path = extern/libevent
 	url = https://github.com/libevent/libevent.git
-	ignore = all
+	ignore = dirty
