added condition to check if APPS_CORESW_SDS_PLUGIN_CVC is disabled

--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -19,7 +19,9 @@ if(APPS_CORECOMPONENTS)
     add_subdirectory(theme)
     add_subdirectory(fonts)
     add_subdirectory(pdfjs)
-    add_subdirectory(monaco)
+    if(APPS_CORESW_SDS_PLUGIN_CVC)
+        add_subdirectory(monaco)
+    endif()
     add_subdirectory(sgwidgets)
     add_subdirectory(common)
     add_subdirectory(commoncpp)
