--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -19,7 +19,7 @@ if(APPS_CORECOMPONENTS)
     add_subdirectory(theme)
     add_subdirectory(fonts)
     add_subdirectory(pdfjs)
-    if(APPS_CORESW_SDS_PLUGIN_CVC)
+    if(APPS_CORESW_SDS AND APPS_CORESW_SDS_PLUGIN_CVC)
         add_subdirectory(monaco)
     endif()
     add_subdirectory(sgwidgets)
