--- a/libs/flasher/CMakeLists.txt
+++ b/libs/flasher/CMakeLists.txt
@@ -68,5 +68,6 @@ set_target_properties(${PROJECT_NAME}${CONNECTOR_SUFFIX} PROPERTIES
 )
 
 if(BUILD_TESTING)
+    add_compile_definitions(BUILD_TESTING)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
 endif()
