--- a/libs/Board/PlatformManager/test/CMakeLists.txt
+++ b/libs/Board/PlatformManager/test/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(${PROJECT_NAME}-test
     PlatformManagerTest.cpp
     PlatformOperationsTest.cpp
     PlatformOperationsV2Test.cpp
+    PlatformMessageTest.cpp
     main.cpp
 )
 
