CS-1852: PlatformMessage: Added test for message content

--- a/libs/Board/PlatformManager/test/CMakeLists.txt
+++ b/libs/Board/PlatformManager/test/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(${PROJECT_NAME}-test
     PRIVATE PlatformManager
     PRIVATE CommandValidator
     PRIVATE strata::base64
+    PUBLIC rapidjson::rapidjson
 )
 
 add_test(NAME ${PROJECT_NAME}-test
