--- a/libs/Board/PlatformManager/test/CMakeLists.txt
+++ b/libs/Board/PlatformManager/test/CMakeLists.txt
@@ -20,9 +20,9 @@ add_executable(${PROJECT_NAME}-test
 
 target_link_libraries(${PROJECT_NAME}-test
     PRIVATE Qt5::Test
-    PRIVATE Platform
-    PRIVATE PlatformManager
-    PRIVATE CommandValidator
+    PRIVATE strata::Platform
+    PRIVATE strata::PlatformManager
+    PRIVATE strata::CommandValidator
     PRIVATE strata::base64
 )
 
