--- a/libs/flasher/test/CMakeLists.txt
+++ b/libs/flasher/test/CMakeLists.txt
@@ -26,3 +26,7 @@ add_test(NAME ${PROJECT_NAME}-test
     COMMAND ${PROJECT_NAME}-test
 )
 
+if(BUILD_TESTING)
+    add_compile_definitions(BUILD_TESTING)
+endif()
+
