--- a/apps/SerialConsoleInterface/CMakeLists.txt
+++ b/apps/SerialConsoleInterface/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(${PROJECT_NAME} WIN32 MACOSX_BUNDLE
     SciCommandHistoryModel.cpp
     SciFilterSuggestionModel.cpp
     SciPlatformSettings.cpp
+    SciMockDevice.cpp
     SciMockDeviceModel.cpp
     SciMockCommandModel.cpp
     SciMockResponseModel.cpp
