PRT: add file-service into config files

--- a/apps/PlatformRegistrationTool/configs/prt-config-prod.ini
+++ b/apps/PlatformRegistrationTool/configs/prt-config-prod.ini
@@ -2,3 +2,6 @@
 [cloud-service]
 url=https://strata.onsemi.com
 server=production
+
+[file-service]
+url=https://api.strata.onsemi.com/api/v1/files/
