update SDS and HCS logic to select the default config files

--- a/apps/DeveloperStudio/CMakeLists.txt
+++ b/apps/DeveloperStudio/CMakeLists.txt
@@ -132,29 +132,45 @@ if(WIN32)
     endif()
 endif()
 
+set(SDS_CONFIG_PATHS_LIST)
+
 if(IS_DIRECTORY "${STRATA_HOST_CORE_INTERNAL_PATH}/assets/config/sds")
-    set(SDS_CONFIG_LOCATION ${STRATA_HOST_CORE_INTERNAL_PATH}/assets/config/sds)
-else()
-    set(SDS_CONFIG_LOCATION ${CMAKE_HOME_DIRECTORY}/assets/config/sds)
+    list(APPEND SDS_CONFIG_PATHS_LIST ${STRATA_HOST_CORE_INTERNAL_PATH}/assets/config/sds)
 endif()
+list(APPEND SDS_CONFIG_PATHS_LIST ${CMAKE_HOME_DIRECTORY}/assets/config/sds)
+
+foreach(CONFIG_PATH IN LISTS SDS_CONFIG_PATHS_LIST)
+    file(GLOB TEMP_FILES_LIST
+        RELATIVE ${CONFIG_PATH}
+        ${CONFIG_PATH}/*.config
+    )
+    list(APPEND APPS_CORESW_SDS_CONFIG_CHOICES ${TEMP_FILES_LIST})
+endforeach()
 
 if(NOT APPS_CORESW_SDS_CONFIG)
-    set(APPS_CORESW_SDS_CONFIG sds_qa.config CACHE STRING "Desired SDS configuration file." FORCE)
-    message(STATUS "Defaulting 'APPS_CORESW_SDS_CONFIG' to ${APPS_CORESW_SDS_CONFIG}.")
+    if("sds_qa.config" IN_LIST APPS_CORESW_SDS_CONFIG_CHOICES)
+        set(APPS_CORESW_SDS_CONFIG "sds_qa.config" CACHE STRING "Desired SDS configuration file." FORCE)
+    else()
+        set(APPS_CORESW_SDS_CONFIG "sds_template.config" CACHE STRING "Desired SDS configuration file." FORCE)
+    endif()
 endif()
-file(GLOB APPS_CORESW_SDS_CONFIG_CHOICES
-    RELATIVE ${SDS_CONFIG_LOCATION}
-    ${SDS_CONFIG_LOCATION}/*.config
-)
 
 set_property(CACHE APPS_CORESW_SDS_CONFIG PROPERTY STRINGS ${APPS_CORESW_SDS_CONFIG_CHOICES})
 if(NOT APPS_CORESW_SDS_CONFIG IN_LIST APPS_CORESW_SDS_CONFIG_CHOICES)
     message(FATAL_ERROR "Specify 'APPS_CORESW_SDS_CONFIG'. Must be one of ${APPS_CORESW_SDS_CONFIG_CHOICES}")
 endif()
 
+find_file(SDS_CONFIG_ABSOLUTE_PATH 
+    NAMES "${APPS_CORESW_SDS_CONFIG}"
+    PATHS ${SDS_CONFIG_PATHS_LIST}
+    NO_DEFAULT_PATH
+    REQUIRED
+)
+
+message("deploying ${SDS_CONFIG_ABSOLUTE_PATH}")
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        ${SDS_CONFIG_LOCATION}/${APPS_CORESW_SDS_CONFIG}
+        ${SDS_CONFIG_ABSOLUTE_PATH}
         $<TARGET_FILE_DIR:${PROJECT_NAME}>/sds.config
     COMMENT "Deploying 'sds.config'..."
     VERBATIM
